# vibe-coding

./: .coveragerc  .cursorrules  .env.bridge.example  .env.example  .gitignore  .gitmodules  .mcp.json  .mcp.on-demand.json  .npmrc  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  REFACTOR.md  biome.json  coverage.xml  docker-compose.yml  joolife_hub.py  package.json  pnpm-lock.yaml  pnpm-log.txt  pyproject.toml  pytest.ini  qc_results.json  requirements-dev.txt  requirements-quality.txt  requirements.txt  ruff.toml  setup.bat  setup.ps1  skills-lock.json  turbo.json
projects/blind-to-x/: .code-review-graphignore  .env.example  CLAUDE.md  README.md  blind_scraper.py  classification_rules.yaml  config.ci.yaml  config.example.yaml  config.py  conftest.py  escalation_runner.py  help.txt  main.py  mock_test.py  prepare_newsletter_data.py  pyproject.toml  pytest.ini  register_schedule.ps1  register_task.ps1  run_pipeline.bat  run_scheduled.bat  run_scheduled.py  scheduler_launchers.ps1  search_notion.py  setup_task_scheduler.ps1  test_fails.txt
projects/shorts-maker-v2/: .code-review-graphignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  FEATURE.md  README.md  channel_profiles.yaml  config.yaml  pyproject.toml  pytest.ini
shorts-maker-v2/: .pre-commit-config.yaml  ARCHITECTURE.md  channel_profiles.yaml  commit_log.txt  config.yaml  cov.txt  cov_report.txt  coverage.xml  llm_cov.txt  missing.txt  mycov.txt  old_patch.txt  pre-commit-content.txt  pyproject.toml  pytest.ini  pytest_edge.txt  pytest_final.txt  pytest_output.txt  pytest_output_utf8.txt  requirements.txt  result.txt  result2.txt  result3.txt  result4.txt  result_full.txt  test_ai_news_generator.py  test_cov.txt  test_edge_client.py  test_future_countdown.py  test_out_shorts.txt  test_ssml.py  test_tech_vs.py  topics_health.txt  topics_history.txt
shorts-maker-v2/.ai/: CONTEXT.md  DECISIONS.md  SESSION_LOG.md
shorts-maker-v2/ShortsFactory/: __init__.py  __main__.py  batch.py  cli.py  generate_short.py  interfaces.py  pipeline.py  render.py  scaffold.py
shorts-maker-v2/docs/: runbook.md
shorts-maker-v2/execution/: download_bgm_sfx.py
shorts-maker-v2/scripts/: patch_script_final.py  patch_script_step.py  patch_script_step2.py  patch_script_step3.py
shorts-maker-v2/shorts_maker_v2/: __init__.py  __main__.py
shorts-maker-v2/tests/: conftest.py
shorts-maker-v2/tools/: ai_tech_shorts.py  health_do_vs_dont.py  health_medical_study.py  health_mental_message.py  history_fact_shorts.py  history_mystery.py  history_timeline.py  psychology_quiz.py  psychology_quote.py  psychology_shorts.py  space_fact_bomb.py  space_scale.py
workspace/: conftest.py  path_contract.py  pyproject.toml  test_evaluator_loop.py  users.db
workspace/directives/: INDEX.md  agent_permissions.yaml  anthropic_prompt_caching.md  api_monitoring.md  code_improvement.md  community_trends.md  daily_report.md  debugging_process.md  deepseek_ko_bridge.md  enhancement_plan_v2.md  finance_tracker.md  github_dashboard.md  llm_eval_promptfoo.md  llm_fallback.md  llm_observability_langfuse.md  local_first_saas_design.md  local_inference.md  mcp_resource_profile.md  mcp_skill_expansion_plan.md  notebooklm_ops.md  notion_integration.md  operator_workflow.md  pr_triage_orchestrator.md  pr_triage_worktree.md  process_management.md  qa_qc_workflow.md  roadmap_v3.md  scheduler.md  security_rotation.md  system_audit_action_plan.md  telegram_notifications.md  vibe_debt_audit.md  watchdog_backup.md  yt_analytics_to_notion.md
workspace/execution/: _ci_analyzers.py  _ci_models.py  _ci_report.py  _ci_utils.py  _env_loader.py  _logging.py  api_usage_tracker.py  backup_restore_test.py  backup_to_onedrive.py  benchmark_local.py  bgm_downloader.py  brand_asset_generator.py  channel_growth_tracker.py  code_evaluator.py  code_improver.py  community_trend_scraper.py  confidence_verifier.py  content_db.py  content_writer.py  context_selector.py  daily_report.py  debt_history_db.py  debug_history_db.py  error_analyzer.py  finance_db.py  gdrive_pdf_extractor.py  github_stats.py  governance_checks.py  graph_engine.py  harness_context.py  harness_eval.py  harness_middleware.py  harness_sandbox.py  harness_security_checklist.py  harness_tool_registry.py  health_check.py  joolife_hub.py  language_bridge.py  llm_client.py  llm_metrics.py  (+33 more)
workspace/scripts/: README.md  _path_bootstrap.py  backup_data.py  check_mapping.py  doctor.py  key_rotation_checker.py  mcp_toggle.ps1  migrate_to_workspace_db.py  quality_gate.py  run_reasoning.py  schedule_yt_analytics.bat  seed_shorts_topics.py  setup_n8n_security.ps1  smoke_check.py  update_all.py  watchdog_heartbeat_check.bat
workspace/tests/: conftest.py  test_ai_context_guard.py  test_api_monitor_page.py  test_api_usage_tracker.py  test_auto_research_ab_decision.py  test_auto_research_approval_pathspec_consistency.py  test_auto_research_browser_qa_inventory.py  test_auto_research_completion_audit.py  test_auto_research_debug_loop_inventory.py  test_auto_research_dependency_freshness_inventory.py  test_auto_research_direction_alignment_audit.py  test_auto_research_launch_objective_audit.py  test_auto_research_llm_wiki_release_summary.py  test_auto_research_next_experiment_selector.py  test_auto_research_refresh_current_evidence.py  test_auto_research_release_authorization_packet.py  test_auto_research_scoped_authorization_menu.py  test_auto_schedule_paths.py  test_backup_restore_test.py  test_backup_to_onedrive.py  test_benchmark_local.py  test_bgm_downloader.py  test_channel_growth_page.py  test_ci_analyzers.py  test_code_evaluator.py  test_code_review_gate.py  test_community_trend_scraper.py  test_content_db.py  test_content_writer.py  test_context_selector.py  test_cost_dashboard.py  test_daily_report.py  test_debt_dashboard_page.py  test_debug_history_db.py  test_debug_history_page.py  test_dependency_hygiene_audit.py  test_dirty_worktree_handoff_plan.py  test_doctor.py  test_error_analyzer.py  test_eval_extract.py  (+82 more)
(+2036 files in other folders)
