[project]
name = "vibe-workspace"
version = "0.1.0"
description = "Vibe Coding shared automation and control plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "croniter>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "ddgs>=0.1.0",
    "psutil>=5.9.0",
    "openai>=1.14.0",
    "google-api-python-client>=2.118.0",
    "google-auth-oauthlib>=1.2.0",
    "pytrends>=4.9.2",
    "Pillow>=10.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "ruff>=0.9.0,<1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests", "execution/tests"]
addopts = "--cov=execution --cov-report=term-missing"
