[project]
name = "vibe-workspace"
version = "0.1.0"
description = "Vibe Coding shared automation and control plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "croniter>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "ddgs>=0.1.0",
    "psutil>=5.9.0",
    "openai>=1.14.0",
    "google-api-python-client>=2.118.0",
    "google-auth-oauthlib>=1.2.0",
    "pytrends>=4.9.2",
    "Pillow>=10.2.0",
    "streamlit>=1.58.0",
    "plotly>=6.8.0",
    "PyYAML>=6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
    "ruff>=0.9.0,<1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint.per-file-ignores]
# These scripts prepend the workspace root to sys.path before importing
# shared execution modules so they can run directly from Windows shells.
"execution/benchmark_local.py" = ["E402"]
"execution/bgm_downloader.py" = ["E402"]
"execution/brand_asset_generator.py" = ["E402"]
"execution/content_db.py" = ["E402"]
"execution/joolife_hub.py" = ["E402"]
"execution/llm_client.py" = ["E402"]
"execution/lyria_bgm_generator.py" = ["E402"]
"execution/pages/api_monitor.py" = ["E402"]
"execution/pages/cost_dashboard.py" = ["E402"]
"execution/pages/debt_dashboard.py" = ["E402"]
"execution/pages/qaqc_status.py" = ["E402"]
"execution/pages/shorts_manager.py" = ["E402"]
"execution/pipeline_watchdog.py" = ["E402"]
"execution/shorts_daily_runner.py" = ["E402"]
"execution/topic_auto_generator.py" = ["E402"]
"execution/vibe_debt_auditor.py" = ["E402"]
"tests/legacy_manual/manual_desktop_robustness.py" = ["E402"]
"tests/legacy_manual/manual_logging.py" = ["E402"]
"tests/test_local_inference.py" = ["E402"]
"tests/test_reasoning_chain.py" = ["E402"]
"tests/test_reasoning_engine.py" = ["E402"]
"tests/test_result_tracker_db.py" = ["E402"]
"tests/test_smart_router.py" = ["E402"]
"tests/test_vibe_debt_auditor.py" = ["E402"]
"tests/test_workers.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests", "execution/tests"]
addopts = "--cov=execution --cov-report=term-missing"

# ── deptry: dependency hygiene (declared-vs-imported) ──────────────────────────
# Run via: python execution/dependency_hygiene_audit.py --project workspace
# This block encodes intentional patterns so residual findings are trustworthy.
[tool.deptry]
# Local sibling modules imported via sys.path bootstrap (not PyPI packages).
known_first_party = [
    "_path_bootstrap",
    "ai_batch_runner",
    "daily_report",
    "scrapers",
    "shorts_maker_v2",
    "telegram_notifier",
]
# The `dev` optional-dependencies group is tooling-only, not runtime.
pep621_dev_dependency_groups = ["dev"]
# Test code legitimately imports pytest; exclude from production-import checks.
extend_exclude = ["execution/tests"]

# google-api-python-client is imported as the `googleapiclient` module; without
# this map deptry double-reports it (DEP002 unused + DEP001 googleapiclient missing).
[tool.deptry.package_module_name_map]
"google-api-python-client" = ["googleapiclient"]

[tool.deptry.per_rule_ignores]
# DEP001: optional integrations imported under try/except for graceful
# degradation — intentionally NOT hard dependencies of the control plane.
DEP001 = ["anthropic", "curl_cffi", "langfuse", "langgraph", "pandas", "pdfplumber", "pytesseract"]
# DEP002: ddgs is wired through dynamic/optional search paths; keep declared.
DEP002 = ["ddgs"]
# DEP003: transitive imports accepted (provided via heavier deps). anthropic and
# pandas are the optional integrations above (DEP001) that also resolve
# transitively in this env — keep undeclared per the optional-only stance.
DEP003 = ["anthropic", "google", "httpx", "pandas", "typing_extensions"]
