[project]
name = "blind-to-x"
version = "0.1.0"
description = "Automated content generation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.50.0",
    "anthropic==0.43.0",
    "notion-client==2.2.1",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "cloudinary==1.41.0",
    "curl_cffi>=0.7.0,<0.9",
    "beautifulsoup4==4.12.3",
    "openai==1.59.9",
    "tweepy==4.14.0",
    "aiohttp==3.11.11",
    "joblib>=1.3.0",
    "pytrends>=4.9.0",
    "pytest-asyncio==0.24.0",
    "kiwipiepy>=0.23.0",
    "trafilatura>=2.0.0",
    "datasketch>=1.9.0",
    "camoufox[geoip]>=0.4.0,<0.6",
    "crawl4ai>=0.4.0",
    "google-generativeai>=0.8.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
addopts = "--cov=pipeline --cov-report=term-missing --cov-fail-under=70"
