[project]
name = "blind-to-x"
version = "0.1.0"
description = "Automated content generation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.60.0",
    "anthropic==0.112.0",
    "notion-client==3.1.0",
    "PyYAML==6.0.3",
    "requests==2.34.2",
    "python-dotenv==1.2.2",
    "cloudinary==1.44.2",
    "curl_cffi>=0.7.0,<0.16",
    "beautifulsoup4==4.15.0",
    "openai==2.43.0",
    "tweepy==4.16.0",
    "aiohttp==3.14.1",
    "joblib>=1.3.0",
    "pytrends>=4.9.0",
    "pytest-asyncio==1.4.0",
    "kiwipiepy>=0.23.0",
    "trafilatura>=2.0.0",
    "datasketch>=1.9.0",
    "camoufox[geoip]>=0.4.0,<0.6",
    "crawl4ai>=0.4.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
    "ruff>=0.11.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
addopts = "--cov=pipeline --cov-report=term-missing --cov-fail-under=70"

[tool.setuptools.packages.find]
include = ["pipeline*", "scrapers*"]

[tool.ruff]
# Explicitly extend the workspace-root ruff.toml. Without this, declaring
# [tool.ruff] here stops ruff's upward config search and the root select/ignore
# rules silently stop applying.
extend = "../../ruff.toml"
# Pin target-version so this project's policy is independent of accidental
# root-level Python-version bumps.
target-version = "py311"
line-length = 120

[tool.ruff.lint.per-file-ignores]
# Test fixtures occasionally need long literal strings for clarity.
"tests/**/*.py" = ["E501"]

[tool.mypy]
# Whitelist mode: only modules listed under [[tool.mypy.overrides]] with
# `strict = true` are type-checked strictly. Everything else runs in the
# default permissive mode so unannotated legacy code does not block CI.
# Run locally: py -3.12 -m mypy pipeline/draft_contract.py pipeline/harness_guard.py
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Hub modules with full type coverage — kept strict so regressions surface.
module = ["pipeline.draft_contract", "pipeline.harness_guard"]
strict = true

# ── deptry: dependency hygiene (declared-vs-imported) ──────────────────────────
# Run via: python execution/dependency_hygiene_audit.py --project blind-to-x
[tool.deptry]
# Local sibling modules imported via sys.path / cross-project bootstrap.
known_first_party = [
    "execution",
    "blind_to_x_cost_db",
    "browser_pool",
    "harness_sandbox",
    "harness_security_checklist",
]
# The `dev` optional-dependencies group is tooling-only.
pep621_dev_dependency_groups = ["dev"]

# Correct package->module mappings so installed deps are not mis-flagged.
# Without these, deptry assumes module name == package name and reports
# `beautifulsoup4` as unused while flagging its real import `bs4` as missing.
[tool.deptry.package_module_name_map]
beautifulsoup4 = ["bs4"]
"google-genai" = ["google"]

[tool.deptry.per_rule_ignores]
# DEP001: optional integrations behind try/except (queue, ML, telemetry,
# anti-bot) + kiwipiepy's companion model package — graceful-degradation, not
# hard dependencies.
DEP001 = [
    "celery",
    "kiwipiepy_model",
    "langgraph",
    "opentelemetry",
    "patchright",
    "playwright_stealth",
    "redis",
    "sklearn",
    "transformers",
]
# DEP002: pytest/pytest-asyncio are declared in the runtime set by legacy
# choice; they are test-only and intentionally retained.
DEP002 = ["pytest", "pytest-asyncio"]
# DEP003: transitive imports accepted (provided via Pillow/openai/requests).
DEP003 = ["PIL", "certifi", "numpy", "typing_extensions"]
